chore : Configuração BD Heroku PostGre hosting

--- a/ApiBienVenido_BackEnd/pom.xml
+++ b/ApiBienVenido_BackEnd/pom.xml
@@ -13,9 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ApiBienVenido</name>
 	<description>Api para consulta e cadastro de currículos</description>
-	<properties>
+	<!-- <properties>
 		<java.version>11</java.version>
-	</properties>
+	</properties> -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -33,10 +33,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+     		<scope>runtime</scope>
+    	</dependency>
+		<!-- <dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
