--- a/ApiBienVenido_BackEnd/src/main/resources/application.properties
+++ b/ApiBienVenido_BackEnd/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bienvenido?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1Camilla2#1995
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=${POSTGRE_URL}
+spring.datasource.username=${POSTGRE_USER}
+spring.datasource.password=${POSTGRE_PASSWORD}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
